<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fon480x854" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/button_stroke_pink_press_white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/LightPink"
        android:textSize="24sp"
        android:textAllCaps="false"/>

    <LinearLayout
        android:id="@+id/container11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/level1"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_stroke_pink_press_white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/level1"
            android:textColor="@color/LightPink"
            android:textSize="24sp" />

        <Button
            android:id="@+id/level2"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_stroke_pink_press_white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/level2"
            android:textColor="@color/LightPink"
            android:textSize="24sp" />

        <Button
            android:id="@+id/level3"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_stroke_pink_press_white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/level3"
            android:textColor="@color/LightPink"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        >

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_stroke_pink_press_white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/next"
            android:textColor="@color/LightPink"
            android:textSize="30sp"
            android:textAllCaps="false"/>
    </LinearLayout>

</RelativeLayout>