<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Level3">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fon480x854"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-189dp"/>

    <LinearLayout
        android:id="@+id/conteiner1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/conteiner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_stroke_pink_press_white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/LightPink"
                    android:textSize="24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/zadanie"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/vopros1"
                    android:textColor="@color/Black80"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Text1"
                    android:gravity="center"
                    android:textColor="@color/Black80"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:id="@+id/line51"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/r11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/yes"
                            android:buttonTint="@color/LightPink"
                            android:textColor="@color/Black80"
                            android:textSize="15sp"/>

                        <RadioButton
                            android:id="@+id/r12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/no"
                            android:buttonTint="@color/LightPink"
                            android:textColor="@color/Black80"
                            android:textSize="15sp"/>
                    </RadioGroup>

                    <ImageView
                        android:id="@+id/imag31"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/kvadratik" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line41"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Text2"
                    android:textColor="@color/Black80"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/line52"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/r21"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/LightPink"
                            android:text="@string/yes"
                            android:textColor="@color/Black80"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/r22"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/LightPink"
                            android:text="@string/no"
                            android:textColor="@color/Black80"
                            android:textSize="15sp" />
                    </RadioGroup>

                    <ImageView
                        android:id="@+id/imag32"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/kvadratik" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line42"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Text3"
                    android:textColor="@color/Black80"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/line53"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/r31"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/LightPink"
                            android:text="@string/yes"
                            android:textColor="@color/Black80"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/r32"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/LightPink"
                            android:text="@string/no"
                            android:textColor="@color/Black80"
                            android:textSize="15sp" />
                    </RadioGroup>

                    <ImageView
                        android:id="@+id/imag33"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/kvadratik" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line43"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Text4"
                    android:textColor="@color/Black80"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/line54"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/r41"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/LightPink"
                            android:text="@string/yes"
                            android:textColor="@color/Black80"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/r42"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/LightPink"
                            android:text="@string/no"
                            android:textColor="@color/Black80"
                            android:textSize="15sp" />
                    </RadioGroup>

                    <ImageView
                        android:id="@+id/imag34"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/kvadratik" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line44"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Text5"
                    android:textColor="@color/Black80"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/line55"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/r51"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/LightPink"
                            android:text="@string/yes"
                            android:textColor="@color/Black80"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/r52"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/LightPink"
                            android:text="@string/no"
                            android:textColor="@color/Black80"
                            android:textSize="15sp" />
                    </RadioGroup>

                    <ImageView
                        android:id="@+id/imag35"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/kvadratik" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnproverka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_stroke_pink_press_white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/proverka"
                    android:textAllCaps="false"
                    android:textColor="@color/LightPink"
                    android:layout_weight="1"
                    android:textSize="24dp" />

                <Button
                    android:id="@+id/button_next1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_stroke_pink_press_white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/LightPink"
                    android:textSize="24dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>